==> roboter/Hardware/STM32/32F3DISCOVERY_F303/DZX-IAR-OpenSource-v18.2.1/Source/MCU/LPC175x6x/mcu_spi.c <==
#include "mcu_spi.h"
#include "mcu_cfg.h"
#include "mcu_irq.h"
#include "mcu_scu.h"

STATUS SPI_Open(SPI* port, UINT32 number, UINT32 clkHz, UINT32 mode)
{
    STATUS status;

    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    SIGNAL_Init(&port->signals);

    switch (number) {
        case 0:
            port->SPIREG = REG_SPI0;
            REGBITS_PCONP.PCSPI = 1;                            /* Power up the SPI controller */
            IRQ_RegisterHandler(IRQ_SPI, SPI_IRQ);
            IRQ_Enable(IRQ_SPI);
            break;
        case 1:
            port->SSPREG = REG_SSP0;
            REGBITS_PCONP.PCSSP0 = 1;
            IRQ_RegisterHandler(IRQ_SSP0, SSP_IRQ);
            IRQ_Enable(IRQ_SSP0);
            break;
        case 2:
            port->SSPREG = REG_SSP1;
            REGBITS_PCONP.PCSSP1 = 1;
            IRQ_RegisterHandler(IRQ_SSP1, SSP_IRQ);
            IRQ_Enable(IRQ_SSP1);
            break;
        default:
            return ERR_NOTSUPPORTED;
    }

    port->number = number;
    SPI_ApplyClock(port, clkHz);                                /* Set the clock rate */

    status = MUTEX_Create(&port->mutex, "SPI", FALSE);          /* Create an underlying mutex */
    if (status != SUCCESS) {
        return status;
    }
   
    switch (number) {
        case 0:
            port->SPIREG->SPCR.BITS.MSTR = 1;                   /* Configure as master */
            port->SPIREG->SPCR.BITS.BITS = 8;                   /* Set for 8-bit data transfers */
            
            if (mode & SPI_CPHA1) {
                port->SPIREG->SPCR.BITS.CPHA = 1;
            } else {
                port->SPIREG->SPCR.BITS.CPHA = 0;
            }
            
            if (mode & SPI_CPOL1) {
                port->SPIREG->SPCR.BITS.CPOL = 1;
            } else {
                port->SPIREG->SPCR.BITS.CPOL = 0;
            }
            break;
        case 1:
        case 2:
            port->SSPREG->CR0.BITS.FRF = 0;                     /* Configure as SPI */
            port->SSPREG->CR0.BITS.DSS = 7;                     /* Configure as 8-bit transfers */
            
            if (mode & SPI_CPHA1) {
                port->SSPREG->CR0.BITS.CPHA = 1;
            } else {
                port->SSPREG->CR0.BITS.CPHA = 0;
            }
            
            if (mode & SPI_CPOL1) {
                port->SSPREG->CR0.BITS.CPOL = 1;
            } else {
                port->SSPREG->CR0.BITS.CPOL = 0;
            }
            
            port->SSPREG->CR1.BITS.MS = 0;                      /* Configure as master */
            port->SSPREG->CR1.BITS.SSE = 1;                     /* Enable the controller */
            break;
    }

    mcu_spi[number] = port;                                     /* Keep a local reference of the opened port */
    return SUCCESS;
}

STATUS SPI_Close(SPI* port)
{
    INTERRUPTLOCK lock;
    STATUS status;
    
 
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    if (mcu_spi[port->number] != port) {                    /* Is the port open? */
        return ERR_NOTINITIALIZED;
    }
    
    status = MUTEX_Destroy(&port->mutex);
    if (status != SUCCESS) {
        return status;
    }
    
    ACQUIREINTERRUPTLOCK();
    
    switch (port->number) {                                 /* Find by port number */
        case 0:
            IRQ_Disable(IRQ_SPI);                          /* Disable possible interrupts */
            REGBITS_PCONP.PCSPI = 0;                        /* Power down the peripheral */
            break;
        case 1:
            IRQ_Disable(IRQ_SSP0);                         /* Disable possible interrupts */
            REGBITS_PCONP.PCSSP0 = 0;                       /* Power down the peripheral */
            break;
        case 2:
            IRQ_Disable(IRQ_SSP1);                         /* Disable possible interrupts */
            REGBITS_PCONP.PCSSP1 = 0;                       /* Power down the peripheral */
            break;
        default:
            RELEASEINTERRUPTLOCK();
            return ERR_INVALIDOPERATION;                    /* Unsupported port number */
    }

    mcu_spi[port->number] = NULL;                           /* Release the port */
    
    RELEASEINTERRUPTLOCK();
    return SUCCESS;
}

static void SPI_ApplyClock(SPI* port, UINT32 baud)
{
    UINT32 divisor;
    UINT32 prescalar;


    switch (port->number) {
        case 0:
            REGBITS_PCLKSEL0.PCLKSPI = 1;                           /* Set the PCLK divisor for the SPI module ( pclk = cclk ) */

            prescalar = CFG_CPUCLOCKHZ / baud;                      /* Calc the prescalar */
            if (prescalar < 8) {                                    /* Bound to the minimum and maximum allowable */
                prescalar = 8;
            } else if (prescalar > 255) {
                prescalar = 255;
            }

            port->SPIREG->SPCCR.BITS.COUNTER = prescalar;           /* Set the SPI clock divider  */
            break;
        case 1:
            REGBITS_PCLKSEL1.PCLKSSP0 = 1;

            prescalar = 2;
            divisor = (CFG_CPUCLOCKHZ / (baud * prescalar)) - 1;    /* Calculate the divisor */
            if (divisor > 255) {                                    /* Bound the divisor */
                divisor = 255;
            }

            port->SSPREG->CR0.BITS.SCR = divisor;                   /* Assign divisor and prescaler */
            port->SSPREG->CPSR.BITS.CPSDVSR = prescalar;
            break;
        case 2:
            REGBITS_PCLKSEL0.PCLKSSP1 = 1;

            prescalar = 2;
            divisor = (CFG_CPUCLOCKHZ / (baud * prescalar)) - 1;    /* Calculate the divisor */
            if (divisor > 255) {                                    /* Bound the divisor */
                divisor = 255;
            }

            port->SSPREG->CR0.BITS.SCR = divisor;                   /* Assign divisor and prescaler */
            port->SSPREG->CPSR.BITS.CPSDVSR = prescalar;
            break;
    }
}

STATUS SPI_Write(SPI* port, const void* data, UINT32 nbytes, UINT32 timeout)
{
    STATUS status;
    UINT32 k;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (data == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Acquire(&port->mutex, timeout);
    if (status != SUCCESS) {
        return status;
    }

    port->data = (void*)data;
    port->buf = NULL;
	port->nbytes = nbytes;
	port->idx = 0;
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    switch (port->number) {                                             /* Find the port number */
        case 0:                                                         /* Port 0 (SPI) */
            port->SPIREG->SPCR.BITS.SPIE = 1;                           /* Enable the interrupt to complete the transfer */
            port->SPIREG->SPDR = ((BYTE*)port->data)[0];                /* Begin the transfer with the first data byte */
            break;

        case 1:                                                         /* Port 1 (SSP 0) */
        case 2:                                                         /* Port 2 (SSP 1) */
            port->SSPREG->IMSC.BITS.RTIM = 1;                           /* Enable the interrupts to complete the transfer */
            port->SSPREG->IMSC.BITS.RXIM = 1;
            
            k = 0;                                                      
            while ((k < 4) && (k < port->nbytes)) {                     /* Load the local SPI FIFO */   
                port->SSPREG->DR.VALUE = ((BYTE*)port->data)[k++];      /* Load the specified data bytes */
            }
            break;
    }
    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);         /* Block and wait for the transfer to complete */
    
    switch (port->number) {
        case 0:
            port->SPIREG->SPCR.BITS.SPIE = 0;                           /* Disable further interrupts */
            break;

        case 1:
        case 2:
            port->SSPREG->IMSC.BITS.RTIM = 0;                           /* Disable further interrupts */
            port->SSPREG->IMSC.BITS.RXIM = 0;
            break;
    }
    
    if (status == SUCCESS) {
        MUTEX_Release(&port->mutex);
        return port->result;
    }
    
    MUTEX_Release(&port->mutex);
    return status;
}

STATUS SPI_Read(SPI* port, void* buf, UINT32 nbytes, UINT32 timeout)
{
    STATUS status;
    UINT32 k;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (buf == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Acquire(&port->mutex, timeout);
    if (status != SUCCESS) {
        return status;
    }
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    port->data = NULL;
    port->buf = buf;
	port->nbytes = nbytes;
	port->idx = 0;
   
    switch (port->number) {                                                 /* Find the port number */
        case 0:                                                             /* Port 0 (SPI) */
            port->SPIREG->SPCR.BITS.SPIE = 1;                               /* Enable the interrupt to complete the transfer */
            port->SPIREG->SPDR = 0;                                         /* Begin the transfer, transmit a dummy value */
            break;

        case 1:                                                             /* Port 1 (SSP 0) */
        case 2:                                                             /* Port 2 (SSP 1) */
            port->SSPREG->IMSC.BITS.RTIM = 1;                               /* Enable the interrupts to complete the transfer */
            port->SSPREG->IMSC.BITS.RXIM = 1;
            
            k = 0;                                                      
            while ((k < 4) && (k < port->nbytes)) {                         /* Load the local SPI FIFO */   
                port->SSPREG->DR.VALUE = 0;
                k++;
            }
            break;
    }
    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);
    
    switch (port->number) {
        case 0:
            port->SPIREG->SPCR.BITS.SPIE = 0;                               /* Disable further interrupts */
            break;

        case 1:
        case 2:
            port->SSPREG->IMSC.BITS.RTIM = 0;                           /* Disable further interrupts */
            port->SSPREG->IMSC.BITS.RXIM = 0;
            break;
    }
    
    if (status == SUCCESS) {                                            /* Did the blocking operation receive a signal from the interrupt? */
        MUTEX_Release(&port->mutex);
        return port->result;                                            /* Yes, then return the result from the interrupt */
    }
    
    MUTEX_Release(&port->mutex);
    return status;                                                      /* Return the error code */
}

static void SPI_IRQ(IRQ irq)
{
    volatile BYTE dummy;
    SPI* port = mcu_spi[0];
    
    
    (void)dummy;

    port->SPIREG->SPINT.VALUE = 1;                                      /* Clear the interrupt */
        
    if ((port->SPIREG->SPSR.VALUE & 0x78) == 0) {                       /* Any error occur? */
        if (port->buf) {
            ((BYTE*)port->buf)[port->idx++] = port->SPIREG->SPDR;       /* Read the received data byte */
        } else {
            dummy = port->SPIREG->SPDR;
            port->idx++;
        }
        
        if (port->idx >= port->nbytes) {                                /* Is the transfer complete? */
            port->result = SUCCESS;
            SIGNAL_Set(&port->signals, SIGNAL_0);
            return;
        }
        
        if (port->data) {
            port->SPIREG->SPDR = ((BYTE*)port->data)[port->idx];
        } else {
            port->SPIREG->SPDR = (BYTE)0;
        }
    } else {
        port->result = ERR_INCOMPLETE;                                  /* An error occurred */ 
        SIGNAL_Set(&port->signals, SIGNAL_0);               
    }
}
